# RiderBuildBug

./: CMakeLists.txt  README.MD
A/: A.cpp  CMakeLists.txt
B/: B.cpp  B.h  CMakeLists.txt
C/: C.cpp  C.h  CMakeLists.txt
